--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,13 +1,13 @@
 [versions]
 agp = "8.7.3"
 kotlin = "2.0.0"
-coreKtx = "1.15.0"
+coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
-composeBom = "2025.03.00"
+composeBom = "2025.04.00"
 jetbrainsKotlinJvm = "2.0.0"
 kotlinxCoroutinesCore = "1.9.0"
 retrofit = "2.11.0"
@@ -19,6 +19,7 @@ koin-bom = "3.5.6"
 koin-annotations = "1.3.1"
 navigationCompose = "2.8.9"
 playServicesLocation = "21.3.0"
+icon-extended = "1.7.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -48,6 +49,7 @@ koin-annotations = { group = "io.insert-koin", name = "koin-annotations", versio
 koin-compiler = { group = "io.insert-koin", name = "koin-ksp-compiler", version.ref = "koin-annotations" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose"}
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
+icons-extended = { group = "androidx.compose.material", name = "material-icons-extended", version.ref = "icon-extended" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
